@@ -22,6 +22,7 @@
   for quick plotting of a formula
 - Chow test: add the option of specifying a dummy variable
   rather than a break point
+- Boxplots: enable boxplot command in loops
 
 1/23/2008 version 1.8.0
 - Fix bug: crash in "Add random variable" dialog
